feat: candidate self-registration + BaseEntity refactor
- Add BaseEntity with audit fields and soft delete
- Enable POST /auth/create for public candidate
- Add Language Enum so candidate can choose the language of choice
- Add admin safety: block delete last admin + self-delete
- Fix PATCH /users/{id} to keep old document if no file sent
- Update DataLoader to ignore soft-deleted admins
- Update DTOs/mapper for language field